Fix username overflow on homePage.html -add .username class to bootstrap.css

--- a/src/main/resources/static/css/bootstrap.css
+++ b/src/main/resources/static/css/bootstrap.css
@@ -93,3 +93,11 @@
     background-color: darkred !important;
     color: white;
 }
+.username {
+    display: inline-block;
+    max-width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    vertical-align: middle;
+}
